# TCMAgent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture-plan.md  neo4j-schema.md  skills-architecture.md  tool-contracts.md  workflow-design.md
scripts/: run_dev.py
skills/intake/contradiction-detection-rules/: SKILL.md
skills/intake/question-phrasing-guide/: SKILL.md
skills/intake/symptom-normalization-protocol/: SKILL.md
skills/safety/contraindication-reference/: SKILL.md
skills/safety/risk-synthesis-protocol/: SKILL.md
skills/shared/case-state-protocol/: SKILL.md
skills/shared/tcm-clinical-basics/: SKILL.md
skills/triage/red-flags-protocol/: SKILL.md
skills/triage/special-population-rules/: SKILL.md
skills/triage/visit-routing-guide/: SKILL.md
src/tcm_agent/: __init__.py
src/tcm_agent/agents/: __init__.py  factory.py  skills_loader.py
src/tcm_agent/api/: __init__.py  app.py
src/tcm_agent/api/routes/: __init__.py  cases.py  chat_runtime.py
src/tcm_agent/config/: __init__.py  settings.py
src/tcm_agent/graph/: __init__.py  neo4j_client.py
src/tcm_agent/runtime/: __init__.py  bootstrap.py
src/tcm_agent/schemas/: __init__.py  case.py
src/tcm_agent/services/: __init__.py  graph_reasoning_service.py
src/tcm_agent/state/: __init__.py  case_store.py
src/tcm_agent/tools/: __init__.py  case_tools.py  graph_tools.py  safety_tools.py  summary_tools.py  triage_tools.py
